Fixed benefit heading spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,18 +64,6 @@ main {
     margin-left: 20px;
 }
 
-/* Sets the formatting for the right-side box with benefits information */
-aside {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
 /* styles and formats within the section element, only used for the main content area */
 section {
     margin-bottom: 20px;
@@ -93,6 +81,7 @@ section img {
 section h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    margin-top: 20px;
 }
 
 /*styles and formats the footer section*/
@@ -131,7 +120,17 @@ footer h2 {
 }
 
 /* styles and formats within the class 'benefits' */
+
+/* Sets the formatting for the right-side box with benefits information */
 .benefit {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -139,6 +138,7 @@ footer h2 {
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
+    margin-top: 20px;
 }
 
 .benefit img {
